--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+# API Key files
+config.py
+config.js
+api_keys.py
+postgresql_password.py
+
+# Mac & VSC specific
+*.DS_Store
+*.vscode
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
